API cleanup.